Fixed Swaggo Errors and Added clubtrak Swaggo
